--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-venv/
-__pycache__/
-*.pyc
-.log/
+##### FOLDERS #####
+**/venv*/
+**/.mypy_cache/
+**/__pycache__/
+**/.vscode/
+
+##### FILES #####
 *.log
